added filtering to all activity table fields and api history endpoints
